--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,31 +1,44 @@
-name: "GH Arxiv Posterbot"
+name: FeedBot
 on:
-  workflow_dispatch: {}
   schedule:
-    - cron: "0 1,3,16,19,22 * * *"
-
+    # This will run every five minutes. Alter it using https://crontab.guru/.
+    - cron: '*/5 * * * *'
+  workflow_dispatch: # This allows manually running the workflow from the GitHub actions page
+concurrency:
+  group: feedbot
 jobs:
-  build:
+  rss-to-bluesky:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Generate cache key
+        uses: actions/github-script@v6
+        id: generate-key
         with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
-      - uses: actions/setup-python@v4
+          script: |
+            core.setOutput('cache-key', new Date().valueOf())
+      - name: Retrieve cache
+        uses: actions/cache@v3
         with:
-          python-version: '3.9'
-          cache: 'pip' # caching pip dependencies
-      - run: pip install -r requirements.txt
-      - name: scrape and run
-        run: python3 paperbot.py
-        env:
-          BSKYBOT: ${{ secrets.BSKYBOT }}
-          BSKYPWD: ${{ secrets.BSKYPWD }}
-      - name: Commit and push
-        uses: EndBug/add-and-commit@v9
+          path: ${{ github.workspace }}/blueskyfeedbot
+          key: feed-cache-${{ steps.generate-key.outputs.cache-key }}
+          restore-keys: feed-cache-
+      - name: GitHub
+        uses: 'joschi/blueskyfeedbot@v1'
         with:
-          add: "."
-          push: true
-          default_author: github_actions
+          # This is the RSS feed you want to publish
+          rss-feed: https://www.githubstatus.com/history.rss
+          # Template of status posted to Bluesky (Handlebars)
+          template: |
+            {{item.title}}
+
+            {{item.link}}
+          # This is your service URL (optional)
+          service-url: https://bsky.social
+          # This is the Bluesky username (example: username.bsky.social)
+          username: ${{ secrets.BLUESKY_USERNAME }}
+          # This is the app password you created earlier
+          password: ${{ secrets.BLUESKY_PASSWORD }}
+          # This is a path to the cache file, using the above cache path
+          cache-file: ${{ github.workspace }}/blueskyfeedbot/cache.json
+          # The maximum number of posts created on the first run
+          initial-post-limit: 10
