--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -26,7 +26,7 @@ jobs:
         uses: 'joschi/blueskyfeedbot@v1'
         with:
           # This is the RSS feed you want to publish
-          rss-feed: https://www.githubstatus.com/history.rss
+          rss-feed: https://export.arxiv.org/rss/econ.gn
           # Template of status posted to Bluesky (Handlebars)
           template: |
             {{item.title}}
