--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -30,6 +30,7 @@ jobs:
           # Template of status posted to Bluesky (Handlebars)
           template: |
             {{item.title}}
+            {{item.authors}}
             {{item.link}}
           # This is your service URL (optional)
           service-url: https://bsky.social
